syntax = "proto3";

import "google/protobuf/timestamp.proto";

option csharp_namespace = "Mareen.gRPC";

package guest;

service guest
{
	rpc CreateAsync(GuestCreationRequest) returns (GuestCreationResponse);
	rpc UpdateAsync(GuestUpdateRequest) returns (GuestUpdateResponse);
	rpc DeleteAsync(GuestDeleteRequest) returns (GuestDeleteResponse);
	rpc GetByIdAsync(GuestGetRequest) returns (GuestGetResponse);
	rpc GetAllAsync(GuestGetAllRequest) returns (GuestGetAllResponse);
	rpc GetAllPaymentHistoriesAsync(GuestGetAllPaymentHistoriesRequest) returns (GuestGetAllPaymentHistoriesResponse);
	rpc GetAllBookingsAsync(GuestGetAllBookingsRequest) returns (GuestGetAllBookingsResponse);
}

message GuestCreationRequest
{
	string firstName = 1;
	string lastName = 2;
	google.protobuf.Timestamp dateOfBirth = 3;
	string passportDetails = 4;
	string phoneNumber = 5;
	string email = 6;
	string password = 7;
}

message GuestCreationResponse
{
	int64 id = 1;
	string firstName = 2;
	string lastName = 3;
	google.protobuf.Timestamp dateOfBirth = 4;
	string passportDetails = 5;
	string phoneNumber = 6;
	string email = 7;
	string password = 8;
}

message GuestUpdateRequest
{
	int64 id = 1;
	string firstName = 2;
	string lastName = 3;
	google.protobuf.Timestamp dateOfBirth = 4;
	string passportDetails = 5;
	string phoneNumber = 6;
	string email = 7;
	string password = 8;
}

message GuestUpdateResponse
{
	int64 id = 1;
	string firstName = 2;
	string lastName = 3;
	google.protobuf.Timestamp dateOfBirth = 4;
	string passportDetails = 5;
	string phoneNumber = 6;
	string email = 7;
	string password = 8;
}

message GuestDeleteRequest
{
	int64 id = 1;
}

message GuestDeleteResponse
{
	bool isDelete = 1;
}

message GuestGetRequest
{
	int64 id = 1;
}

message GuestGetResponse
{
	int64 id = 1;
	string firstName = 2;
	string lastName = 3;
	google.protobuf.Timestamp dateOfBirth = 4;
	string passportDetails = 5;
	string phoneNumber = 6;
	string email = 7;
	string password = 8;
}

message GuestGetAllRequest
{

}

message GuestGetAllResponse
{
	repeated GuestGetResponse sth = 1;
}

message GuestGetAllPaymentHistoriesRequest
{
	int64 id = 1;
}

message GuestGetPaymentHistoryResponse
{
	int64 id = 1;
	int64 guestId = 2;
	int64 bookingId = 3;
	int64 paymentId = 4;
	double amount = 5;
	int32 paymentType = 6;
	int32 paymentStatus = 7;
}

message GuestGetAllPaymentHistoriesResponse
{
	repeated GuestGetPaymentHistoryResponse sth = 1;
}

message GuestGetAllBookingsRequest
{
	int64 id = 1;
}

message GuestGetBookingResponse
{
	int64 id = 1;
	int64 roomId = 2;
	int64 guestId = 3;
	double amount = 4;
	google.protobuf.Timestamp startDate = 5;
	google.protobuf.Timestamp endDate = 6;
	int32 status = 7;
}

message GuestGetAllBookingsResponse
{
	repeated GuestGetBookingResponse sth = 1;
}